// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ChoiceGroup Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Playground of ChoiceGroup
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <div
                className="ChoiceGroup__StyledChoiceGroup-njp29m-0 fglYeh"
              >
                <h4
                  className="Heading__StyledHeading-sc-1b8cso5-0 leAbYN"
                >
                  What was the reason for your cancellation?
                </h4>
                <div
                  className="Stack__StyledStack-sc-1t576ow-0 bRODnW"
                >
                  <label
                    checked={false}
                    className="Radio__Label-sc-5lanou-6 jZYznP"
                  >
                    <input
                      checked={false}
                      className="Radio__Input-sc-5lanou-5 juylbO"
                      disabled={false}
                      onChange={[Function]}
                      type="radio"
                      value="one"
                    />
                    <div
                      className="Radio__IconContainer-sc-5lanou-1 hRhfzi"
                    >
                      <span
                        className="Radio__Glyph-sc-5lanou-0 kbnJYl"
                        disabled={false}
                      />
                    </div>
                    <div
                      className="Radio__TextContainer-sc-5lanou-2 fngmbH"
                    >
                      <span
                        className="Radio__LabelText-sc-5lanou-4 kvtYjE"
                      >
                        Reason one
                      </span>
                    </div>
                  </label>
                  <label
                    checked={false}
                    className="Radio__Label-sc-5lanou-6 jZYznP"
                  >
                    <input
                      checked={false}
                      className="Radio__Input-sc-5lanou-5 juylbO"
                      disabled={false}
                      onChange={[Function]}
                      type="radio"
                      value="two"
                    />
                    <div
                      className="Radio__IconContainer-sc-5lanou-1 hRhfzi"
                    >
                      <span
                        className="Radio__Glyph-sc-5lanou-0 kbnJYl"
                        disabled={false}
                      />
                    </div>
                    <div
                      className="Radio__TextContainer-sc-5lanou-2 fngmbH"
                    >
                      <span
                        className="Radio__LabelText-sc-5lanou-4 kvtYjE"
                      >
                        Reason two
                      </span>
                    </div>
                  </label>
                  <label
                    checked={false}
                    className="Radio__Label-sc-5lanou-6 jZYznP"
                  >
                    <input
                      checked={false}
                      className="Radio__Input-sc-5lanou-5 juylbO"
                      disabled={false}
                      onChange={[Function]}
                      type="radio"
                      value="three"
                    />
                    <div
                      className="Radio__IconContainer-sc-5lanou-1 hRhfzi"
                    >
                      <span
                        className="Radio__Glyph-sc-5lanou-0 kbnJYl"
                        disabled={false}
                      />
                    </div>
                    <div
                      className="Radio__TextContainer-sc-5lanou-2 fngmbH"
                    >
                      <span
                        className="Radio__LabelText-sc-5lanou-4 kvtYjE"
                      >
                        Reason three
                      </span>
                    </div>
                  </label>
                </div>
              </div>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          ChoiceGroup
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  What was the reason for your cancellation?
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              onChange
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  onChange
                                </span>
                                }
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Radio
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Reason one
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              value
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  one
                                </span>
                                "
                              </span>
                            </span>
                             
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Radio
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Reason two
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              value
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  two
                                </span>
                                "
                              </span>
                            </span>
                             
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Radio
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Reason three
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              value
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  three
                                </span>
                                "
                              </span>
                            </span>
                             
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          ChoiceGroup
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ChoiceGroup Multiple 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Multiple
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Playground of ChoiceGroup
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <div
                className="ChoiceGroup__StyledChoiceGroup-njp29m-0 fglYeh"
              >
                <h4
                  className="Heading__StyledHeading-sc-1b8cso5-0 leAbYN"
                >
                  What was the reason for your cancellation?
                </h4>
                <div
                  className="Stack__StyledStack-sc-1t576ow-0 bRODnW"
                >
                  <label
                    className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
                  >
                    <input
                      checked={false}
                      className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
                      disabled={false}
                      onChange={[Function]}
                      type="checkbox"
                      value="one"
                    />
                    <div
                      className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
                    >
                      <svg
                        className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                        />
                      </svg>
                    </div>
                    <div
                      className="Checkbox__TextContainer-sc-1x6twh3-1 ePDkGQ"
                    >
                      <span
                        className="Checkbox__LabelText-sc-1x6twh3-3 kNgPJv"
                      >
                        Reason one
                      </span>
                    </div>
                  </label>
                  <label
                    className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
                  >
                    <input
                      checked={false}
                      className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
                      disabled={false}
                      onChange={[Function]}
                      type="checkbox"
                      value="two"
                    />
                    <div
                      className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
                    >
                      <svg
                        className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                        />
                      </svg>
                    </div>
                    <div
                      className="Checkbox__TextContainer-sc-1x6twh3-1 ePDkGQ"
                    >
                      <span
                        className="Checkbox__LabelText-sc-1x6twh3-3 kNgPJv"
                      >
                        Reason two
                      </span>
                    </div>
                  </label>
                  <label
                    className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
                  >
                    <input
                      checked={false}
                      className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
                      disabled={false}
                      onChange={[Function]}
                      type="checkbox"
                      value="three"
                    />
                    <div
                      className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
                    >
                      <svg
                        className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                        />
                      </svg>
                    </div>
                    <div
                      className="Checkbox__TextContainer-sc-1x6twh3-1 ePDkGQ"
                    >
                      <span
                        className="Checkbox__LabelText-sc-1x6twh3-3 kNgPJv"
                      >
                        Reason three
                      </span>
                    </div>
                  </label>
                </div>
              </div>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          ChoiceGroup
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  What was the reason for your cancellation?
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              onChange
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  onChange
                                </span>
                                }
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Checkbox
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Reason one
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              value
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  one
                                </span>
                                "
                              </span>
                            </span>
                             
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Checkbox
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Reason two
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              value
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  two
                                </span>
                                "
                              </span>
                            </span>
                             
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Checkbox
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Reason three
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              value
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  three
                                </span>
                                "
                              </span>
                            </span>
                             
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          ChoiceGroup
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ChoiceGroup Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Playground of ChoiceGroup
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <div
                className="ChoiceGroup__StyledChoiceGroup-njp29m-0 fglYeh"
                data-test="test"
              >
                <h4
                  className="Heading__StyledHeading-sc-1b8cso5-0 leAbYN"
                >
                  What was the reason for your cancellation?
                </h4>
                <div
                  className="Stack__StyledStack-sc-1t576ow-0 bRODnW"
                >
                  <label
                    checked={false}
                    className="Radio__Label-sc-5lanou-6 GaLVi"
                  >
                    <input
                      checked={false}
                      className="Radio__Input-sc-5lanou-5 juylbO"
                      disabled={false}
                      onChange={[Function]}
                      type="radio"
                      value="one"
                    />
                    <div
                      className="Radio__IconContainer-sc-5lanou-1 hRhfzi"
                    >
                      <span
                        className="Radio__Glyph-sc-5lanou-0 kbnJYl"
                        disabled={false}
                      />
                    </div>
                    <div
                      className="Radio__TextContainer-sc-5lanou-2 fngmbH"
                    >
                      <span
                        className="Radio__LabelText-sc-5lanou-4 kvtYjE"
                      >
                        Reason one
                      </span>
                    </div>
                  </label>
                  <label
                    checked={false}
                    className="Radio__Label-sc-5lanou-6 GaLVi"
                  >
                    <input
                      checked={false}
                      className="Radio__Input-sc-5lanou-5 juylbO"
                      disabled={false}
                      onChange={[Function]}
                      type="radio"
                      value="two"
                    />
                    <div
                      className="Radio__IconContainer-sc-5lanou-1 hRhfzi"
                    >
                      <span
                        className="Radio__Glyph-sc-5lanou-0 kbnJYl"
                        disabled={false}
                      />
                    </div>
                    <div
                      className="Radio__TextContainer-sc-5lanou-2 fngmbH"
                    >
                      <span
                        className="Radio__LabelText-sc-5lanou-4 kvtYjE"
                      >
                        Reason two
                      </span>
                    </div>
                  </label>
                  <label
                    checked={false}
                    className="Radio__Label-sc-5lanou-6 GaLVi"
                  >
                    <input
                      checked={false}
                      className="Radio__Input-sc-5lanou-5 juylbO"
                      disabled={false}
                      onChange={[Function]}
                      type="radio"
                      value="three"
                    />
                    <div
                      className="Radio__IconContainer-sc-5lanou-1 hRhfzi"
                    >
                      <span
                        className="Radio__Glyph-sc-5lanou-0 kbnJYl"
                        disabled={false}
                      />
                    </div>
                    <div
                      className="Radio__TextContainer-sc-5lanou-2 fngmbH"
                    >
                      <span
                        className="Radio__LabelText-sc-5lanou-4 kvtYjE"
                      >
                        Reason three
                      </span>
                    </div>
                  </label>
                </div>
                <div
                  className="FormFeedback__StyledFormFeedback-sc-1lhzkwp-0 kPCzrr"
                >
                  Something is wrong
                </div>
              </div>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          ChoiceGroup
                        </span>
                        <span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              dataTest
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  test
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  What was the reason for your cancellation?
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              labelSize
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  normal
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              labelElement
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  h4
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              onChange
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  onChange
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              error
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Something is wrong
                                </span>
                                "
                              </span>
                            </span>
                            <br />
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Radio
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Reason one
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              value
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  one
                                </span>
                                "
                              </span>
                            </span>
                             
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Radio
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Reason two
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              value
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  two
                                </span>
                                "
                              </span>
                            </span>
                             
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          Radio
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  Reason three
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              value
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  three
                                </span>
                                "
                              </span>
                            </span>
                             
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          ChoiceGroup
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
